incredibly rough draft for apply section / sponsor

--- a/content/heading.mdx
+++ b/content/heading.mdx
@@ -1,7 +1,4 @@
-# PennApps XXIII
+# Game On! Applications are now open.
 
-## September 2-4, 2022
+## Hosted at the nation's first university, PennApps is the original college hackathon. Come join us to learn something new, build an app, or start a company. Let’s continue to make history together.
 
-### Beleaf it or not, applications are open!
-
-Hosted at the nation's first university, PennApps is the original college hackathon. Come join us to learn something new, build an app, or start a company. Let’s continue to make history together.
