--- a/content/faq.mdx
+++ b/content/faq.mdx
@@ -35,7 +35,8 @@ We're looking for creative, innovative, and team-oriented hackers with a set of 
 
 ## When will applications close?
 
-The application will close July 20th at 11:59pm EDT.
+The PRIORITY application will close June 30th at 11:59 PM ET. 
+The FINAL application will close July 16th at 11:59 PM ET.
 
 ## Who can apply?
 
