--- a/content/schedule/friday.mdx
+++ b/content/schedule/friday.mdx
@@ -13,12 +13,10 @@
 | 7:00 PM  | 11:00 PM | Hardware Lab Open                                                                 | Detkin Lab        |
 | 7:00 PM  | 8:00 PM  | Pre-Hack/Team Formation                                                           | Wu & Chen         |
 | 7:00 PM  |             | Mentorship Lounge Opens                                                           | Towne 319         |
-| 7:00 PM  | 8:00 PM  | Design Thinking (Trang Pham from Venture Lab)                                     | Towne 100         |
-| 8:00 PM  | 9:00 PM  | Acing the non-technicals: Behaviorals, LinkedIn and Recruiters (Ashna Srivastava) | Towne 100         |
-| 9:00 PM  | 10:00 PM | Introduction to Hardware Hacking with Penn Architechs                             | Towne 100         |
-| 9:00 PM  | 10:00 PM | Cup Stacking Competition (Side Event)                                             | Quain Courtyard   |
-| 9:00 PM  | 10:00 PM | Convex workshop                                                                   | Towne 309         |
-| 10:00 PM | 11:00 PM | Polygon workshop                                                                  | Towne 309         |
-| 10:00 PM | 11:00 PM | Overcoming the Mental Barriers of CS (Ishaan Lal)                                 | Towne 100         |
-| 10:00 PM | 11:00 PM | Hands-On Hardware Hacking with Penn Architechs                                    | Detkin Lab        |
+| 8:00 PM  | 9:00 PM  | Brandon Kong Workshop                                                             | Towne 100         |
+| 8:00 PM  | 9:00 PM  | Career Services Workshop                                                          | Towne 217         |
+| 9:00 PM  | 10:00 PM  | Viam Workshop                                                                    | Towne 217         |
+| 9:30 PM  | 10:00 PM  | Google Student Developers Club Workshop                                          | Towne 100         |
+| 10:00 PM  | 11:00 PM  | Side Event (DIY Stickers)                                                        | Greenberg Lounge  |
+| 10:00 PM  | 11:00 PM  | Side Event (Games)                                                        | TBD  |
 | 11:00 PM |             | Sleeping Room Opens                                                               | Berger Auditorium |
