updated style for schedule

--- a/content/schedule/saturday.mdx
+++ b/content/schedule/saturday.mdx
@@ -1,1 +1,4 @@
 ## Saturday
+
+| Start       | End         | Event                                                                             | Location          |
+| ----------- | ----------- | --------------------------------------------------------------------------------- | ----------------- |
