better colors + add date for schedule page

--- a/content/schedule/friday.mdx
+++ b/content/schedule/friday.mdx
@@ -1,4 +1,4 @@
-## Friday
+## Friday, Sept. 8th
 
 | Start       | End         | Event                                                                             | Location          |
 | ----------- | ----------- | --------------------------------------------------------------------------------- | ----------------- |
