--- a/content/schedule/saturday.mdx
+++ b/content/schedule/saturday.mdx
@@ -1,4 +1,4 @@
-## Saturday
+## Saturday, Sept. 9th
 
 | Start       | End         | Event                                                                             | Location          |
 | ----------- | ----------- | --------------------------------------------------------------------------------- | ----------------- |
