--- a/content/schedule/sunday.mdx
+++ b/content/schedule/sunday.mdx
@@ -1,4 +1,4 @@
-## Sunday
+## Sunday, Sept. 10th
 
 | Start       | End         | Event                                   | Location          |
 | ----------- | ----------- | --------------------------------------- | ----------------- |
