--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -2,24 +2,24 @@
 
 ## Friday, Sept. 8th
 
-| Start    | End      | Event                                      | Location           |
-|----------|----------|--------------------------------------------|--------------------|
-| 2:00 PM  |          | Bag Check                                  | Raisler            |
-| 3:00 PM  | 5:30 PM  | Hacker/Sponsor Check-in                    | Levine Lobby       |
-| 6:00 PM  | 7:00 PM  | Opening Ceremony                           | Wu & Chen          |
-| 6:30 PM  | 9:30 PM  | Sponsor Fair                               | Towne 1st floor    |
-| 6:45 PM  | 7:45 PM  | Dinner                                     | Levine Lobby       |
-| 7:00 PM  | 8:15 PM  | Team Formation                             | Wu & Chen          |
-| 7:00 PM  |          | Hacking Begins                             | Engineering Quad   |
-| 7:00 PM  | 11:00 PM | Hardware Lab Open                          | Detkin Lab         |
-| 7:00 PM  | 8:00 PM  | Pre-Hack/Team Formation                    | Wu & Chen          |
-| 7:00 PM  |          | Mentorship Lounge Opens                    | Towne 319          |
-| 8:00 PM  | 9:00 PM  | Brandon Kong Workshop: Intro to Blockchain | Towne 100          |
-| 8:00 PM  | 9:00 PM  | Google Student Developers Club Workshop    | Virtual (Link TBA) |
-| 9:00 PM  | 10:00 PM | Viam Workshop                              | Towne 217          |
-| 10:00 PM | 11:00 PM | Side Event (DIY Stickers)                  | Greenberg Lounge   |
-| 10:00 PM | 11:00 PM | Side Event (Games)                         | TBA                |
-| 11:00 PM |          | Sleeping Room Opens                        | Berger Auditorium  |
+| Start    | End      | Event                                      | Location                                               |
+|----------|----------|--------------------------------------------|--------------------------------------------------------|
+| 2:00 PM  |          | Bag Check                                  | Raisler                                                |
+| 3:00 PM  | 5:30 PM  | Hacker/Sponsor Check-in                    | Levine Lobby                                           |
+| 6:00 PM  | 7:00 PM  | Opening Ceremony                           | Wu & Chen                                              |
+| 6:30 PM  | 9:30 PM  | Sponsor Fair                               | Towne 1st floor                                        |
+| 6:45 PM  | 7:45 PM  | Dinner                                     | Levine Lobby                                           |
+| 7:00 PM  | 8:15 PM  | Team Formation                             | Wu & Chen                                              |
+| 7:00 PM  |          | Hacking Begins                             | Engineering Quad                                       |
+| 7:00 PM  | 11:00 PM | Hardware Lab Open                          | Detkin Lab                                             |
+| 7:00 PM  | 8:00 PM  | Pre-Hack/Team Formation                    | Wu & Chen                                              |
+| 7:00 PM  |          | Mentorship Lounge Opens                    | Towne 319                                              |
+| 8:00 PM  | 9:00 PM  | Brandon Kong Workshop: Intro to Blockchain | Towne 100                                              |
+| 8:00 PM  | 9:00 PM  | Google Student Developers Club Workshop    | Virtual ([Link](https://meet.google.com/fdw-hxnd-agi)) |
+| 9:00 PM  | 10:00 PM | Viam Workshop                              | Towne 217                                              |
+| 10:00 PM | 11:00 PM | Side Event (DIY Stickers)                  | Greenberg Lounge                                       |
+| 10:00 PM | 11:00 PM | Side Event (Games)                         | TBA                                                    |
+| 11:00 PM |          | Sleeping Room Opens                        | Berger Auditorium                                      |
 
 ---
 
